feat: checkpoint Lumi 0.4.0-dev-17